staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dcex
spec:
  selector:
    app: dcex
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
