staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dcex.krishdev.xyz
      secretName: dcex-tls

  rules:
    - host: dcex.krishdev.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dcex
                port:
                  number: 80
